--- a/timetable.html
+++ b/timetable.html
@@ -27,7 +27,7 @@ $( "#tabs" ).tabs();
       */
   }
   
-  
+  //show or hide advanced inputs that aren't compulsory
   		function advToggle() {
         	var e = document.getElementById('advance');
        		if(e.style.display == 'block')
